gateway-api-training/code/tag06/grpcroute.yaml
# gRPC-Routing nach Service/Methode und Header
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: payments
  namespace: payments
spec:
  parentRefs:
    - name: web
      namespace: infra
      sectionName: https-grpc
  hostnames:
    - grpc.gw.localtest.me
  rules:
    # Reflection, damit grpcurl list/describe funktionieren
    - matches:
        - method:
            service: grpc.reflection.v1.ServerReflection
        - method:
            service: grpc.reflection.v1alpha.ServerReflection
      backendRefs:
        - {name: payments, port: 3000}
    # Echo -> v1; EchoTwo -> v2; Tester mit x-version: v2 immer -> v2
    - matches:
        - method:
            service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
            method: Echo
      backendRefs:
        - {name: payments, port: 3000}
    - matches:
        - method:
            service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
            method: EchoTwo
        - headers:
            - {name: x-version, value: v2}
      backendRefs:
        - {name: payments-v2, port: 3000}
